--- a/public/less/frontend/event.less
+++ b/public/less/frontend/event.less
@@ -122,4 +122,6 @@ a.btn.details-toggle {
 
 	border-bottom-left-radius: 0;
 	border-bottom-right-radius: 0;
+	position: relative;
+	bottom: -6px;
 }
